<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="reset">reset</string>
    <string name="moreThat100"> You cannot have more than 100 points</string>
    <string name="lessThan0"> You cannot have less than 0 point</string>
</resources>
